project(event.grid-node CXX)

set(INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(SOURCE_FILES
	${SOURCE_PATH}/Main.cpp
)

add_executable (${PROJECT_NAME} ${SOURCE_FILES})

target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries (${PROJECT_NAME} LINK_PUBLIC event.grid-node.core)

set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

install(TARGETS ${PROJECT_NAME} COMPONENT ${PROJECT_NAME} DESTINATION bin)
